[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ECbeOgrXoAI1Bno.png" type="Texture" id=2]
[ext_resource path="res://assets/maintitle.png" type="Texture" id=3]
[ext_resource path="res://fonts/buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/buttonstyle.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/buttonstylefocus.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/music/Race_to_Mars.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/unnamed.png" type="Texture" id=8]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "slide"
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1022.88, 378.087 ), Vector2( 275, 378.087 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10, 15, 20, 25, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 125, 200.087 ), Vector2( 688.88, 200.087 ), Vector2( 700.88, 400.087 ), Vector2( 720.88, 175.087 ), Vector2( 680.88, 325.087 ), Vector2( 700.88, 100.087 ), Vector2( 1300.88, 825.087 ) ]
}

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.739624
margin_right = 0.739624
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.739624
margin_right = 0.739624
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1022.88, 378.087 )
scale = Vector2( 1.59756, 1.67673 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/slide = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -250.0
margin_right = -250.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 38.0
focus_neighbour_left = NodePath("../quit")
focus_neighbour_top = NodePath("../quit")
focus_neighbour_right = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Credits")
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Jugar"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 250.0
margin_bottom = 80.0
focus_neighbour_left = NodePath("../Start")
focus_neighbour_top = NodePath("../Start")
focus_neighbour_right = NodePath("../quit")
focus_neighbour_bottom = NodePath("../quit")
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Cr√©ditos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 250.0
margin_bottom = 122.0
focus_neighbour_left = NodePath("../Credits")
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_right = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Start")
theme = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Salir"

[node name="OUTRUN-2" type="Sprite" parent="."]
position = Vector2( 650, 275 )
scale = Vector2( 1.40977, 1.3925 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
